<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About_Us">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/xcode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        app:civ_border_width="4dp"
        app:civ_border_color="#78777f"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xcode"
        android:layout_below="@+id/profile_image"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/android_developers"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/title"
        android:textColor="#888"
        android:layout_marginTop="-6dp"/>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/caption"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/email"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            android:paddingLeft="20dp"
            android:textColor="#999"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout1"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/github"
            android:layout_marginLeft="-80dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/git_profile"
            android:paddingLeft="20dp"
            android:textColor="#999"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout2"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/twitter"
            android:layout_marginLeft="-70dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twitter"
            android:paddingLeft="20dp"
            android:textColor="#999"/>

    </LinearLayout>

</RelativeLayout>