<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".Settings">

    <LinearLayout
        android:id="@+id/notify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/notify_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/notify"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_going_notification"
            android:textColor="#111"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/notify_text"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/current_location_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Current Location"
            android:textColor="#111"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/current_place_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="GPS Required"
            android:textColor="#777" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/units"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/current_location_text"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Units"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/units_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/units"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Units"
            android:textColor="#111"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/units_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="None"
            android:textColor="#777" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Apply" />


</RelativeLayout>